# nx_open

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .hgeol  .hgignore  0001-Do-not-send-moduleInformation-request-to-himself.patch  1  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakeSettings.json.in  CMakeSettings.json.template  HD Witness (test-cases).xls  HD Witness 1.6.xls  Podfile  VSWorkspaceSettings.json  Vagrantfile  _aximp.bat  _build-all.bat  _convert-all.bat  _convert-all.sh  _convert-clean-all.bat  _rebuild-all.bat  asan-blacklist.txt  av_compare.py  aximp.bat  axis_compare.py  bootstrap.sh  build-av.properties  build-custom-colors.properties  build-customcolors.properties  build-default.properties  build-default_zh_CN.properties  build-digitalwatchdog.properties  build-help.bat  build-ipera.properties  build-nnodal.properties  build-nutech.properties  build-pivothead.properties  build-relong.properties  (+81 more)
applauncher/: CMakeLists.txt  _convert.bat  _rebuild.bat  mirror.xml  pom.xml  readme.txt  todo.txt
applauncher/maven/: applauncher-specifics.pro
applauncher/src/: StdAfx.h  applauncher_app_info.h  applauncher_process.cpp  applauncher_process.h  blocking_queue.h  client_installation.cpp  client_installation.h  custom_transition.cpp  get_file_operation.cpp  get_file_operation.h  installation_manager.cpp  installation_manager.h  installation_process.cpp  installation_process.h  launcher_common_data.cpp  launcher_common_data.h  launcher_fsm.cpp  launcher_fsm.h  list_directory_operation.cpp  list_directory_operation.h  main.cpp  named_pipe_server.h  named_pipe_server_unix.cpp  named_pipe_server_win32.cpp  named_pipe_socket.h  named_pipe_socket_unix.cpp  named_pipe_socket_unix.h  named_pipe_socket_win32.cpp  named_pipe_socket_win32.h  process_utils.cpp  process_utils.h  rdir_syncher.cpp  rdir_syncher.h  rdir_synchronization_operation.h  rns_product_parameters.cpp  rns_product_parameters.h  start_application_task.cpp  start_application_task.h  task_queue_watcher.cpp  task_queue_watcher.h  (+4 more)
appserver2/: CMakeLists.txt  appserver2.qbs  pom.xml
appserver2/db/: ecs.db
appserver2/src/: StdAfx.h  base_ec2_connection.cpp  base_ec2_connection.h  business_event_manager.cpp  business_event_manager.h  camera_manager.cpp  camera_manager.h  client_query_processor.h  client_registrar.cpp  client_registrar.h  compatibility_items.cpp  compatibility_items.h  config.h  connection_factory.cpp  connection_factory.h  crash_reporter.cpp  crash_reporter.h  ec2_connection.cpp  ec2_connection.h  ec2_statictics_reporter.cpp  ec2_statictics_reporter.h  ec2_thread_pool.cpp  ec2_thread_pool.h  ec_connection_audit_manager.cpp  ec_connection_audit_manager.h  ec_connection_notification_manager.cpp  ec_connection_notification_manager.h  fixed_url_client_query_processor.h  ini.h  mail_service.cpp  mail_service.h  media_server_manager.cpp  media_server_manager.h  remote_ec_connection.cpp  remote_ec_connection.h  resource_manager.cpp  resource_manager.h  serialization_helper.h  server_query_processor.cpp  server_query_processor.h  (+5 more)
appserver2/tests/: appserver2_tests.pyproj  ec2_cluster_test.cfg  ec2_cluster_test_case1.cfg  ec2_tests.cfg  tc1.ini
artifacts/detection_plugin_stub/: CMakeLists.txt  detection_plugin_stub.cpp
artifacts/nx_kit/: CMakeLists.txt  build.bat  build.sh  nx_kit.cmake  readme.md  readme.txt
client/: .hgignore  CMakeLists.txt  StdAfx.h  _convert-clean-common.bat  _convert-clean.bat  _convert-common.bat  _convert.bat  binaries.xml  build-custom-colors.properties  client-common-x86.sln  client-specifics.pro  client.pro  client.qbs  convert-2010.bat  convert.bat  convert.py  filetypes.py  genskin.py  pom.xml  version.pri  version.py
client/activex_client/: pom.xml
client/applauncher/: CMakeLists.txt  _clean.bat  _convert-common.bat  applauncher.qbs  applauncher.rc  pom.xml
client/client_lite/: pom.xml
client/desktop_client/: CMakeLists.txt  desktop_client.qbs  desktop_client.rc  pom.xml
client/launcher/: build-x64.bat  build-x86.bat  launcher-x64.vcproj  launcher-x64.vcxproj  launcher-x86.vcproj  launcher-x86.vcxproj
client/libclient/: .hgeol  CMakeLists.txt  libclient.qbs  pom.xml  release_notes.txt
client/libclient_core/: CMakeLists.txt  libclient_core.qbs  pom.xml
client/macsetup/: make.py
client/maven/: build-prepare.py  client-specifics.pro  genskin.py  resources.py
client/minilauncher/: CMakeLists.txt  minilauncher.rc  pom.xml
client/mobile_client/: CMakeLists.txt  mobile_client.qbs  pom.xml
client/nov_browser/: CMakeLists.txt
client/nov_file_launcher/: CMakeLists.txt  version.h
client/nx_client_core/: CMakeLists.txt  pom.xml
cloud/: .hgignore  CMakeLists.txt
common/: CMakeLists.txt  _rebuild.bat  common-specifics.pro  common.qbs  common_version.py  compatibility.py  compinfo.py  convert.py  gencomp.py  genproto.py  pom.xml  qt.conf
common_libs/: CMakeLists.txt  common_libs.qbs  pom.xml
debsetup/: CMakeLists.txt  build.sh  common.sh  debsetup.qbs  pom.xml  pre-clean.sh
dependencies/: CMakeLists.txt
distribution/: CMakeLists.txt  build_distribution_utils.sh
libs/: CMakeLists.txt
mediaserver/: 1  CMakeLists.txt  _convert-clean.bat  _rebuild-common.bat  convert.bat  convert.py  local_run.sh  mediaserver-common-x86.sln  mediaserver-specifics.pro  mediaserver-x64.VC.opendb  mediaserver.qbs  pom.xml  port_control_protocol_todo.txt  valgrind-memcheck.supp  version.py
mediaserver_core/: CMakeLists.txt  camera_vendors.cmake  camera_vendors.h.in  mediaserver_core.qbs  pom.xml
nx_cloud/: CMakeLists.txt  cloud_modules.xml  nx_cloud.qbs  pom.xml
nx_cloud_deploy/: CMakeLists.txt  cloud_build_number  common.sh  environment  make.sh
nx_metadata_sdk/: CMakeLists.txt  build_sample.bat  build_sample.sh  build_sdk.bat  create_sdk.cmake.in  readme.md
nxtool/: CMakeLists.txt  nxtool.rc  pom.xml
paxton_plugin/: CMakeLists.txt  app_info.cs.in  assembly_info.cs.in  log4net.config  sync_dependencies.py
plugins/: CMakeLists.txt  plugins.qbs  pom.xml
unit_tests/: CMakeLists.txt  auto.py  pom.xml
vms/: CMakeLists.txt
(+57582 files in other folders)
